--- a/src/main/webapp/WEB-INF/pages/HelloView.jspx
+++ b/src/main/webapp/WEB-INF/pages/HelloView.jspx
@@ -4,7 +4,7 @@
 
     <jsp:directive.page contentType="text/html; charset=UTF-8"/> 
 
-	<form:form modelAttribute="hello">
+	<form:form modelAttribute="helloForm">
 	    <table>
 	        <tr>
 	            <td>First Name:</td>
