--- a/src/main/webapp/hello-jq.jspx
+++ b/src/main/webapp/hello-jq.jspx
@@ -5,11 +5,11 @@
     <jsp:directive.page contentType="text/html; charset=UTF-8"/>
 
 <jsp:text><![CDATA[<!doctype html>]]></jsp:text>
-<html>
+<html xmlns="http://www.w3.org/1999/xhtml">
   <head>
     <meta http-equiv="Content-Type" content="text/html;charset=UTF-8" />
-    <script src="assets/jquery-1.11.1.js"><jsp:text/></script>
-    <script src="hello-jq.js"><jsp:text/></script>
+    <script src="assets/jquery-1.11.1.js" ><jsp:text /></script>
+    <script src="hello-jq.js" ><jsp:text /></script>
     <title>hello-jq</title>
   </head>
   <body>
